--- a/src/Components/Login/Login.css
+++ b/src/Components/Login/Login.css
@@ -5,3 +5,8 @@
     margin-top: 50px;
     margin-top: 20px;
 }
+.btn-google{
+    margin-left: 50px;
+    width: 400px;
+    border-radius: 20px;
+}
