--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -1,5 +1,5 @@
 .metro-container{
-    background-image: url('../../images/Bg.png');
+    background-image: url('../../images/bg2.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: bottom;
